auth: passport jwt integration
